@@ -245,6 +245,19 @@ AC_ARG_ENABLE(cap,
     [enable POSIX.1e capabilities (default=yes on Linux)])
   ])
 
+dnl Curses/ncurses support
+AC_ARG_ENABLE(curses,
+  [AC_HELP_STRING(
+    [--disable-curses],
+    [disable use of curses (default=no)])
+  ])
+
+AC_ARG_ENABLE(ncurses,
+  [AC_HELP_STRING(
+    [--disable-ncurses],
+    [disable use of ncurses (default=no)])
+  ])
+
 dnl IPv6 support.
 AC_ARG_ENABLE(ipv6,
   [AC_HELP_STRING(
@@ -255,7 +268,6 @@ AC_ARG_ENABLE(ipv6,
       AC_DEFINE(USE_IPV6, 1, [Define if using IPv6 support.])
     fi
   ])
-
 
 dnl Sendfile support.
 AC_ARG_ENABLE(sendfile,
@@ -938,6 +950,14 @@ AC_CHECK_LIB(curses, initscr,
 AC_CHECK_LIB(ncurses, initscr,
   [CURSES_LIBS="-lncurses"
    AC_DEFINE(HAVE_LIBNCURSES, 1, [Define if you have ncurses])])
+
+if test x"$enable_curses" != xno ; then
+  AC_DEFINE(USE_CURSES)
+fi
+
+if test x"$enable_ncurses" != xno ; then
+  AC_DEFINE(USE_NCURSES)
+fi
 
 dnl Check for various argv[] replacing functions on various OSs
 AC_CHECK_FUNCS(setproctitle)
